# ThousandPlayer

./: .gitignore  CMakeLists.txt  Format.md  FormatSupport.md  README.md  SupportInfo.md  cleanProject.sh  conan_debug_windows_x64.txt  conan_release_windows_x64.txt  conanfile.txt  conanfile_ci.txt  main.cpp  tp_mainplaywindow.cpp  tp_mainplaywindow.h
.github/workflows/: ubuntu-latest.yml  windows-2019.yml
bundled/: README.md
markdown/: credits.md  legal.md
portable_windows/v0.1/: ThousandPlayer_0.1.zip.REMOVED.git-id
source/: CMakeLists.txt  main.cpp  tp_mainclass.cpp  tp_mainclass.h
source/config/: CMakeLists.txt  tp_config.cpp  tp_config.h
source/global/: CMakeLists.txt  tp_cmakeconfig.h.cmake  tp_cmakeconfig.h.in  tp_config.h  tp_globalconst.h  tp_globalenum.h  tp_globalfunction.cpp  tp_globalfunction.h  tp_globalvariable.cpp  tp_globalvariable.h
source/test/: CMakeLists.txt  tp_test_ui.cpp
source/ui/: CMakeLists.txt  tp_button.cpp  tp_button.h  tp_configwindow.cpp  tp_configwindow.ui  tp_container.cpp  tp_container.h  tp_frame.cpp  tp_frame.h  tp_label.cpp  tp_label.h  tp_mainplaywindow.cpp  tp_mainplaywindow.h  tp_mainplaywindow.ui  tp_mainwindow.cpp  tp_mainwindow.h  tp_mainwindow.ui  tp_menu.cpp  tp_menu.h  tp_playlist.cpp  tp_playlist.h  tp_playlist.ui  tp_playlistbottomframe.cpp  tp_playlistbottomframe.h  tp_playlistcontainer.cpp  tp_playlistcontainer.h  tp_pushbutton.cpp  tp_pushbutton.h  tp_systemtrayicon.cpp  tp_systemtrayicon.h  tp_titlebar.cpp  tp_titlebar.h
source/ui/configwindow/: CMakeLists.txt  tp_configwindow.cpp  tp_configwindow.h  tp_configwindow.ui
source/ui/lyricswindow/: CMakeLists.txt  tp_lyricscontainer.cpp  tp_lyricscontainer.h  tp_lyricseditor.cpp  tp_lyricseditor.h  tp_lyricseditor.ui  tp_lyricsstackedwidget.cpp  tp_lyricsstackedwidget.h  tp_lyricsviewer.cpp  tp_lyricsviewer.h  tp_lyricswindow.cpp  tp_lyricswindow.h  tp_lyricswindow.ui
source/ui/mainwindow/: CMakeLists.txt  tp_albumcoverlabel.cpp  tp_albumcoverlabel.h  tp_albumcoverviewer.cpp  tp_albumcoverviewer.h  tp_audioinfolabel.cpp  tp_audioinfolabel.h  tp_coverlabel.cpp  tp_coverlabel.h  tp_coverviewer.cpp  tp_coverviewer.h  tp_coverviewer.ui  tp_mainwindow.cpp  tp_mainwindow.h  tp_mainwindow.ui  tp_timeslider.cpp  tp_timeslider.h  tp_timesliderproxystyle.cpp  tp_timesliderproxystyle.h  tp_visualcontainer.cpp  tp_visualcontainer.h  tp_volumeicon.cpp  tp_volumeicon.h  tp_volumeslider.cpp  tp_volumeslider.h
source/ui/playlistwindow/: CMakeLists.txt  tp_filelisttableview.cpp  tp_filelisttableview.h  tp_filelisttablewidget.cpp  tp_filelisttablewidget.h  tp_filelistwidget.cpp  tp_filelistwidget.h  tp_filesearchdialog.cpp  tp_filesearchdialog.h  tp_filesearchdialog.ui  tp_listofplayliststableview.cpp  tp_listofplayliststableview.h  tp_playlistbottomframe.cpp  tp_playlistbottomframe.h  tp_playlistcontainer.cpp  tp_playlistcontainer.h  tp_playlistswidget.cpp  tp_playlistswidget.h  tp_playlistwindow.cpp  tp_playlistwindow.h  tp_playlistwindow.ui  tp_progressdialog.cpp  tp_progressdialog.h  tp_replaygainscanprogress.cpp  tp_replaygainscanprogress.h  tp_replaygainscanprogress.ui  tp_runnable_filereader.cpp  tp_runnable_filereader.h  tp_runnable_replaygainscanner.cpp  tp_runnable_replaygainscanner.h
translation/: README.md  ThousandPlayer_ja_JP.ts  ThousandPlayer_zh_CN.ts  ThousandPlayer_zh_TW.ts
